# AlgorithmsSpecialization

./: CMakeLists.txt  README.md
01.Karatsuba/: CMakeLists.txt  main.cpp
01.Karatsuba/include/: Karatsuba.hpp
01.Karatsuba/test/: CMakeLists.txt  KaratsubaStressTest.cpp  KaratsubaTest.cpp  KaratsubaUnitTest.cpp
02.Inversions/: CMakeLists.txt  main.cpp
02.Inversions/include/: MergeSort.hpp
02.Inversions/test/: CMakeLists.txt  InversionsStressTest.cpp  InversionsUnitTest.cpp
03.QuickSort/: CMakeLists.txt  main.cpp
03.QuickSort/include/: QuickSort.hpp
03.QuickSort/test/: CMakeLists.txt  QuickSortStressTest.cpp  QuickSortUnitTest.cpp
04.MinimumCut/: CMakeLists.txt  main.cpp
04.MinimumCut/include/: KargersMinCut.hpp  UnionFind.hpp
04.MinimumCut/test/: CMakeLists.txt  KargersMinCutUnitTest.cpp  UnionFindUnitTest.cpp
05.StronglyConnectedComponents/: CMakeLists.txt  main.cpp
05.StronglyConnectedComponents/include/: SCC.hpp
05.StronglyConnectedComponents/test/: CMakeLists.txt  SCCUnitTest.cpp
06.ShortestPath/: CMakeLists.txt  main.cpp
06.ShortestPath/include/: ShortestPath.hpp
06.ShortestPath/test/: CMakeLists.txt  ShortestPathUnitTest.cpp
07.MedianMaintenance/: CMakeLists.txt  main.cpp
07.MedianMaintenance/include/: MedianMaintenance.hpp
07.MedianMaintenance/test/: CMakeLists.txt  MedianMaintenanceStressTest.cpp  MedianMaintenanceUnitTest.cpp
08.TwoSum/: CMakeLists.txt  main.cpp
08.TwoSum/include/: TwoSum.hpp
08.TwoSum/test/: CMakeLists.txt  TwoSumStressTest.cpp  TwoSumUnitTest.cpp
09.MinimumWeightedSumOfCompletionTimes/: CMakeLists.txt  main.cpp
09.MinimumWeightedSumOfCompletionTimes/include/: WeightedSumOfCompletionTimes.hpp  include
09.MinimumWeightedSumOfCompletionTimes/test/: CMakeLists.txt  WeightedSumOfCompletionTimesUnitTest.cpp
10.MinimumSpanningTree/: CMakeLists.txt  main.cpp
10.MinimumSpanningTree/include/: MinimumSpanningTree.hpp
10.MinimumSpanningTree/test/: CMakeLists.txt  MinimumSpanningTreeUnitTest.cpp
11.Clustering/: CMakeLists.txt  main.cpp
11.Clustering/include/: Clustering.hpp
11.Clustering/test/: CMakeLists.txt  ClusteringUnitTest.cpp
12.ClusteringBig/: CMakeLists.txt  GPATH  GRTAGS  GSYMS  GTAGS  main.cpp
12.ClusteringBig/include/: BitstringFunctions.hpp  ClusteringBig.hpp
12.ClusteringBig/test/: BitstringFunctionsUnitTest.cpp  CMakeLists.txt  ClusteringBigUnitTest.cpp
13.HuffmanCoding/: CMakeLists.txt  main.cpp
13.HuffmanCoding/include/: HuffmanCoding.hpp
13.HuffmanCoding/test/: CMakeLists.txt  HuffmanCodingUnitTest.cpp
14.MaxWeightIndependentSet/: CMakeLists.txt  main.cpp
14.MaxWeightIndependentSet/include/: MaxWeightIndependentSet.hpp
14.MaxWeightIndependentSet/test/: CMakeLists.txt  MaxWeightIndependentSetStressTest.cpp  MaxWeightIndependentSetUnitTest.cpp
15.Knapsack/: CMakeLists.txt  main.cpp
15.Knapsack/include/: Knapsack.hpp
15.Knapsack/test/: CMakeLists.txt  (+2 more)
16.KnapsackBig/: CMakeLists.txt  main.cpp
17.AllPairsShortestPath/: CMakeLists.txt  TODO.txt  main.cpp
17.AllPairsShortestPath/test/: AllPairsShortestPathUnitTest.cpp  CMakeLists.txt  JohnsonUnitTest.cpp
18.TravelingSalesmanProblem/: CMakeLists.txt  main.cpp
19.ApproximateTravelingSalesmanProblem/: CMakeLists.txt  main.cpp
20.2SAT/: CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
include/: UniformRandom.hpp  UnionFind.hpp
test/: CMakeLists.txt  UnionFindUnitTest.cpp
(+18 files in other folders)
