cmake_minimum_required(VERSION 3.5.1)
project(AlgorithmsSpecialization)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -O3")

# ctest
enable_testing()

include_directories(include)

add_subdirectory(dependencies)
add_subdirectory(test)
add_subdirectory(01.Karatsuba)
add_subdirectory(02.Inversions)
add_subdirectory(03.QuickSort)
add_subdirectory(04.MinimumCut)
add_subdirectory(05.StronglyConnectedComponents)
add_subdirectory(06.ShortestPath)
add_subdirectory(07.MedianMaintenance)
add_subdirectory(08.TwoSum)
add_subdirectory(09.MinimumWeightedSumOfCompletionTimes)
add_subdirectory(10.MinimumSpanningTree)
add_subdirectory(11.Clustering)
add_subdirectory(12.ClusteringBig)
add_subdirectory(13.HuffmanCoding)
add_subdirectory(14.MaxWeightIndependentSet)
add_subdirectory(15.Knapsack)
add_subdirectory(16.KnapsackBig)
add_subdirectory(17.AllPairsShortestPath)
add_subdirectory(18.TravelingSalesmanProblem)
