add_executable(MaxWeightIndependentSetUnitTest MaxWeightIndependentSetUnitTest.cpp)
add_executable(MaxWeightIndependentSetStressTest MaxWeightIndependentSetStressTest.cpp)

target_link_libraries(MaxWeightIndependentSetUnitTest gmock pthread)

add_test(MaxWeightIndependentSetUnitTest MaxWeightIndependentSetUnitTest)
